src/test/deca/syntax/valid/class_extends_valid.deca
//  Description :
// 
//      Test syntaxiquement correct d'une classe et de l'utilisation d'un instanceof
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class A {

}
class B extends A{

}

